Cambios para que los dias laborales sean globales a todos los domain de un appkey en especifico
