# application/local/app/Http/Controllers/DayOffController.php
@@ -76,10 +76,9 @@ class DayOffController extends Controller
         $resp = array();
         $data = $request->json()->all();
         $appkey = $request->header('appkey');
-        $domain = $request->header('domain');
         $data['appkey'] = $appkey;
         
-        if (!empty($appkey) && !empty($domain)) {
+        if (!empty($appkey)) {
             $validator = Validator::make($data, [
                 'name' => 'bail|required|max:70',
                 'date_dayoff' => 'bail|required|isodate',
@@ -96,16 +95,20 @@ class DayOffController extends Controller
 
                 $resp = Resp::error(400, 1020, $message);
             } else {
-                $dayoffs = $this->daysoff->createDayOff($appkey, $domain, $data);
-
-                if (isset($dayoffs['error']) && is_a($dayoffs['error'], 'Exception')) {                
-                    $resp = Resp::error(500, $dayoffs['error']->getCode(), '', $dayoffs['error']);
-                } else {                
-                    $resp = Resp::make(201);
+                if (!$this->daysoff->dayOffExists($appkey, $data['date_dayoff'])) {
+                    $dayoffs = $this->daysoff->createDayOff($appkey, $data);
+                    
+                    if (isset($dayoffs['error']) && is_a($dayoffs['error'], 'Exception')) {                
+                        $resp = Resp::error(500, $dayoffs['error']->getCode(), '', $dayoffs['error']);
+                    } else {                
+                        $resp = Resp::make(201);
+                    }
+                } else {
+                    $resp = Resp::error(406, 2001);
                 }
             }
         } else {
-            return Resp::error(400, 1000); 
+            return Resp::error(400, 5000); 
         }
         
         return $resp;
